--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.2",
+    "@ionic/storage-angular": "^3.0.2",
+    "ionic-custom-alert": "0.0.2",
+    "jwt-decode": "^3.1.2",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xcodebuild": "^1.0.2",
